--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGO_DB=mongodb://localhost:27017
+MONGO_DB=mongodb+srv://maks7sk:3mg3n1hZWDNSSRMV@cluster0.qfagsms.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
